get instant quote

--- a/404.html
+++ b/404.html
@@ -15,6 +15,7 @@
         <ul style="list-style: none; font-size: 20px;">
             <li><a href="/">Home</a></li>
             <li><a href="/contact-us">Contact Us</a></li>
+            <li><a href="/get-instant-quote/">Get Free Instant Quotation </a></li>
         </ul>
         <div style="margin-top: 20px;">
             <p style="font-size: 18px; color: #707070;">Still lost? Contact us directly:</p>
