--- a/get-instant-quote/index.html
+++ b/get-instant-quote/index.html
@@ -228,7 +228,7 @@
 
   .contact-form {
     background-color: #fcf8cd;
-    padding: 20px;
+     
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     font-family: 'Helvetica Neue', Arial, sans-serif;
@@ -613,7 +613,7 @@
           <a class="btn btn-primary text-light px-4 my-1" href="tel:+447946366320">Need Assistance? Call Us Now!</a>
 
           
-            <a class="btn btn-outline-primary px-4 my-1 ms-xl-4" href="/services/">Explore Our Services<span class="ms-2"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+            <a class="btn btn-primary text-light px-4 my-1" href="/get-instant-quote/">Free Instant Quotation<span class="ms-2"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
 </svg>
 </span></a>
