--- a/get-instant-quote/index.html
+++ b/get-instant-quote/index.html
@@ -228,7 +228,7 @@
 
   .contact-form {
     background-color: #fcf8cd;
-     
+    padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     font-family: 'Helvetica Neue', Arial, sans-serif;
