--- a/get-instant-quote/index.html
+++ b/get-instant-quote/index.html
@@ -365,18 +365,18 @@
       const formData = new FormData(this);
       const data = Object.fromEntries(formData);
 
-      
       const response = await fetch(`https://api.submitjson.com/v1/submit/j32eK0EEH`, {
         method: 'POST',
         headers: {
-          'content-type': 'application/json', 
-          'X-API-Key': 'sjk_57541ca93b0441b98eebd0a3a0e91a21', 
+          'content-type': 'application/json',
+          'X-API-Key': 'sjk_57541ca93b0441b98eebd0a3a0e91a21',
         },
-        body: JSON.stringify({ data }) 
+        body: JSON.stringify({ data })
       });
 
       if (!response.ok) {
-        throw new Error('Network response was not ok');
+        const errorResponse = await response.text();  
+        throw new Error('Network response was not ok: ' + errorResponse);
       }
 
       const submission = await response.json();
@@ -386,9 +386,11 @@
       window.location.href = 'https://autorecovery247.co.uk/thankyou/';
     } catch (error) {
       console.error('There was a problem with the fetch operation:', error);
+      alert('Submission failed: ' + error.message);  
     }
   });
 </script>
+
 
 
 <section class="section cta py-5">
