--- a/thankyou/index.html
+++ b/thankyou/index.html
@@ -47,8 +47,6 @@
 
   
   
-  
-
 
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://autorecovery247.co.uk/images/autorecovery247logo.svg" /><meta name="twitter:title" content="Thank You! Enquiry Received"/>
@@ -64,6 +62,8 @@
 
   
 
+
+ <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16566778652"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-16566778652'); </script>
 
   
   <style type="text/css" media="all">/*!
