--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -65,6 +65,15 @@
 
  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16566778652"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-16566778652'); </script>
 
+
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-MFV97V4V');</script>
+  
+
+
   
   <style type="text/css" media="all">/*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
@@ -641,5 +650,10 @@
         widget.style.display = scrollTop > 200 ? 'block' : 'none'; 
     });
   </script>
+  
+
+  
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MFV97V4V"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </body>
 </html>
